<resources>
    <string name="app_name">Wasa</string>
    <string name="parse">Получить</string>
    <string name="fr_70">Сильные ассоциации</string>
    <string name="fr_30">Умеренные ассоциации</string>
    <string name="fr_0">Слабые ассоциации</string>

    <string name="noun">Существ.</string>
    <string name="adjective">Прилагат.</string>
    <string name="verb">Глаголы</string>
    <string name="adverb">Наречия</string>
    <string name="add">Добавить</string>
    <string name="game_hint">Добавьте слово</string>
    <string name="guess">Угадать</string>
    <string name="maybe">Возможно, это</string>

    <string name="guess_text">Введено слов - %s/10</string>
    <string name="or">или что-то из этого:</string>
    <string name="no_internet_connection">Нет подключения к интернету</string>
    <string name="invalid_api_key">API ключ устарел. Приложение более недоступно.</string>
    <string name="request_error">Превышено количество запросов к серверу. Приложение недоступно.</string>
    <string name="language_error">Проблема с поддержкой русского языка на сервере, повторите попытку позже.</string>
    <string name="general_http_error">Неизвестная ошибка на сервере.</string>
    <string name="generic_error">Неизвестная ошибка при запросе на сервер.</string>
    <string name="menu_1">Ассоциации к словам</string>
    <string name="menu_2">Угадать по ассоциациям</string>
    <string name="menu_3">Информация</string>
    <string name="enter_a_word">Введите слово</string>
    <string name="asso_fragment">Wasa - ассоциации</string>
    <string name="wasa">Wasa</string>
    <string name="guess_game">Wasa - угадать слово</string>
    <string name="title">Информация о приложении</string>
    <string name="message">Приложение разработано Бырна Алексеем на базе API проекта Сеть Словесных Ассоциаций\nВерсия приложения: 0.1.0-beta02\nПри использовании текущей версии приложения могут возникать проблемы.\nРелизная версия приложения будет выложена на github в репозитории пользователя FlexeiPrata.</string>

</resources>