<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/guess_text_minor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_bold"
        android:textColor="@color/tangerine"
        android:textSize="@dimen/_10ssp"
        android:gravity="center"
        android:ellipsize="end"
        android:maxLines="1"
        android:layout_marginBottom="@dimen/_12sdp"
        app:layout_constraintBottom_toTopOf="@+id/guess"
        app:layout_constraintEnd_toEndOf="@+id/guess"
        app:layout_constraintStart_toStartOf="@+id/guess"
        tools:text="Кровать, кошка, маникюр" />

    <TextView
        android:id="@+id/guess_label2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_1sdp"
        android:fontFamily="@font/roboto_light"
        android:text="@string/or"
        android:textColor="@color/blueberry"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintBottom_toTopOf="@+id/guess_text_minor"
        app:layout_constraintEnd_toEndOf="@+id/guess"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="@+id/guess" />

    <ProgressBar
        android:id="@+id/loadingBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="@dimen/_70sdp"
        android:layout_height="@dimen/_70sdp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/guess_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_6sdp"
        android:fontFamily="@font/roboto_light"
        android:textSize="@dimen/_12ssp"
        android:textColor="@color/blueberry"
        android:text="@string/maybe"
        app:layout_constraintBottom_toTopOf="@+id/guess_text"
        app:layout_constraintEnd_toEndOf="@+id/guess"
        app:layout_constraintStart_toStartOf="@+id/guess" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/guess"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_8sdp"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/roboto_light"
        android:insetBottom="0dp"
        android:text="@string/guess"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:hint="@string/game_hint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonAdd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_light"
            android:inputType="textCapSentences|textCapWords"
            android:textColor="@color/tangerine" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonAdd"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:fontFamily="@font/roboto_light"
        android:insetBottom="0dp"
        android:text="@string/add"
        app:layout_constraintBottom_toBottomOf="@+id/textField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textField" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:fontFamily="@font/roboto_light"
        tools:text="Выбранные слова (0 / 10): "
        android:textColor="@color/dark_navy"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintEnd_toEndOf="@+id/buttonAdd"
        app:layout_constraintStart_toStartOf="@+id/textField"
        app:layout_constraintTop_toBottomOf="@+id/textField" />

    <TextView
        android:id="@+id/guess_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_6sdp"
        android:fontFamily="@font/roboto_bold"
        android:maxLines="1"
        android:textColor="@color/tangerine"
        android:textSize="@dimen/_20ssp"
        app:layout_constraintBottom_toTopOf="@+id/guess_label2"
        app:layout_constraintEnd_toEndOf="@+id/guess"
        app:layout_constraintStart_toStartOf="@+id/guess"
        tools:text="Корабельный двигатель" />
</androidx.constraintlayout.widget.ConstraintLayout>